--- a/HealthyHappyTummy2/app/src/main/res/values/strings.xml
+++ b/HealthyHappyTummy2/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Healthy Happy Tummy</string>
+    <string name="title_activity_diary">DiaryActivity</string>
 </resources>
