--- a/HappyHealthyTummyApp/app/src/main/res/values/strings.xml
+++ b/HappyHealthyTummyApp/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Happy Healthy Tummy App</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_main_page">MainPageActivity</string>
+    <string name="title_activity_add_entry_page">AddEntryPage</string>
 </resources>
