--- a/HappyHealthyTummyApp/app/src/main/res/values/strings.xml
+++ b/HappyHealthyTummyApp/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_main_page">MainPageActivity</string>
     <string name="title_activity_add_entry_page">AddEntryPage</string>
+    <string name="title_activity_view_entry">ViewEntryActivity</string>
 </resources>
